--- a/SchoolManagementMVC/Views/Shared/_Layout.cshtml
+++ b/SchoolManagementMVC/Views/Shared/_Layout.cshtml
@@ -7,13 +7,14 @@
     <title>@ViewBag.Title - School Management</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
-    <link href="https://bootswatch.com/3/readable/bootstrap.min.css" rel="stylesheet" />
+    @*<link href="https://bootswatch.com/3/readable/bootstrap.min.css" rel="stylesheet" />*@
+    <link href="https://bootswatch.com/3/flatly/bootstrap.min.css" rel="stylesheet"/>
     <link href="https://fonts.googleapis.com/css?family=Raleway:400,700,700i&display=swap" rel="stylesheet">
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"/>
     <link href="~/Content/Custom.css" rel="stylesheet"/>
 </head>
 <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
+    <div class="navbar navbar-default navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
