--- a/SchoolManagementMVC/Views/UploadFiles/Create.cshtml
+++ b/SchoolManagementMVC/Views/UploadFiles/Create.cshtml
@@ -6,7 +6,6 @@
 
 <h2>Create</h2>
 
-
 @using (Html.BeginForm("Create", "UploadFiles", null, FormMethod.Post, new { enctype = "multipart/form-data" })) 
 {
     @Html.AntiForgeryToken()
@@ -15,22 +14,18 @@
     <h4>UploadFile</h4>
     <hr />
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-
     <div class="form-group">
-        <label for="" class="control-label col-md-2">Eliga una Posicion</label>
-        <select name="" id="chooseSelect" class="form-control">
-            <option value="0">--Seleccione--</option>
-            <option value="students">Estudiantes</option>
-            <option value="employees">Empleados</option>
-        </select>
+        @Html.LabelFor(model => model.PositionID, "PositionID", htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.DropDownList("PositionID", null, htmlAttributes: new { @class = "form-control" })
+            @Html.ValidationMessageFor(model => model.PositionID, "", new { @class = "text-danger" })
+        </div>
     </div>
 
     <div class="form-group">
         @Html.LabelFor(model => model.StudentID, "StudentID", htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @*@Html.DropDownList("StudentID", null, htmlAttributes: new { @class = "form-control" })*@
-            @*@Html.DropDownList(m => m.StudentID, new SelectList(Model.Students, "StudentID", "FullName"), "-- Seleccione Estudiante--")*@
-            @Html.DropDownListFor(m => m.StudentID, (SelectList)ViewBag.Students, "Seleccionar Estudiante", new { @class = "form-control"})
+            @Html.DropDownList("StudentID", null, htmlAttributes: new { @class = "form-control" })
             @Html.ValidationMessageFor(model => model.StudentID, "", new { @class = "text-danger" })
         </div>
     </div>
@@ -38,9 +33,7 @@
     <div class="form-group">
         @Html.LabelFor(model => model.EmployeeID, "EmployeeID", htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @*@Html.DropDownList("EmployeeID", null, htmlAttributes: new { @class = "form-control" })*@
-            @*@Html.DropDownList(m => m.EmployeeID, new SelectList(Model.Employees, "EmployeeID", "FullName"), "-- Seleccione Empleado--")*@
-            @Html.DropDownListFor(m => m.EmployeeID, (SelectList)ViewBag.Employees, "Seleccionar Empleado", new { @class = "form-control"})
+            @Html.DropDownList("EmployeeID", null, htmlAttributes: new { @class = "form-control" })
             @Html.ValidationMessageFor(model => model.EmployeeID, "", new { @class = "text-danger" })
         </div>
     </div>
@@ -48,19 +41,18 @@
     <div class="form-group">
         @Html.LabelFor(model => model.Summary, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            <textarea class="form-control" name="Summary"></textarea>
+            @Html.EditorFor(model => model.Summary, new { htmlAttributes = new { @class = "form-control" } })
             @Html.ValidationMessageFor(model => model.Summary, "", new { @class = "text-danger" })
         </div>
     </div>
 
-
-
     <div class="form-group">
-        <label class="control-label col-md-2">Files:</label>
+        <label class="control-label col-md-2">File(s)</label>
         <div class="col-md-10">
-            <input type="file" name="file" class="form-control" multiple="multiple" />
+            <input type="file" name="file" multiple="multiple" />
         </div>
     </div>
+
 
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
@@ -73,24 +65,3 @@
 <div>
     @Html.ActionLink("Back to List", "Index")
 </div>
-
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
-}
-
-<script>
-$('#chooseSelect').change(function(){
-	var selectedOption = $('#chooseSelect').val();
-
-	if(selectedOption == 1) {
-		$('#students').css({'display': 'block'});
-		$('#employees').css({'display': 'none'});
-	} else if(selectedOption == 2) {
-		$('#students').css({'display': 'none'});
-		$('#employees').css({'display':  'block'});
-	} else {
-		$('#students').css({'display': 'none'});
-		$('#employees').css({'display': 'none'});
-	}
-});
-</script>
