--- a/SchoolManagementMVC/Views/UploadFiles/Delete.cshtml
+++ b/SchoolManagementMVC/Views/UploadFiles/Delete.cshtml
@@ -20,6 +20,14 @@
         </dd>
 
         <dt>
+            @Html.DisplayNameFor(model => model.Position.Description)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Position.Description)
+        </dd>
+
+        <dt>
             @Html.DisplayNameFor(model => model.Students.FirstName)
         </dt>
 
