--- a/SchoolManagementMVC/Views/Shared/_Layout.cshtml
+++ b/SchoolManagementMVC/Views/Shared/_Layout.cshtml
@@ -53,7 +53,7 @@
                     <li><a href="#">Finanzas</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="#"><i class="fa fa-bell"></i></a></li>
+                    <li><a href="#"><i class="fa fa-bell"></i> Notificaciones</a></li>
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">nombreUsuario <span class="caret"></span></a>
                         <ul class="dropdown-menu">
