Working on authentication

--- a/SchoolManagementMVC/Views/Home/Index.cshtml
+++ b/SchoolManagementMVC/Views/Home/Index.cshtml
@@ -29,3 +29,26 @@
         <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
     </div>
 </div>
+
+<div class="row">
+    <div class="col-xs-12 col-md-12">
+        <h3 class="text-left">Estudiantes</h3>
+    </div>
+</div>
+
+<div class="row">
+    <div class="table-responsive">
+        <table class="table table-hover">
+            <thead>
+                <tr>
+                    <th>Nombre</th>
+                    <th>Curso</th>
+                    <th>Telefono</th>
+                    <th>Esta al dia ($)</th>
+                    <th></th>
+                </tr>
+            </thead>
+            <tbody></tbody>
+        </table>
+    </div>
+</div>
