--- a/SchoolManagementMVC/Views/Shared/_Layout.cshtml
+++ b/SchoolManagementMVC/Views/Shared/_Layout.cshtml
@@ -7,7 +7,7 @@
     <title>@ViewBag.Title - School Management</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
-    <link href="https://bootswatch.com/3/flatly/bootstrap.min.css" rel="stylesheet"/>
+    <link href="https://bootswatch.com/3/readable/bootstrap.min.css" rel="stylesheet"/>
     <link href="https://fonts.googleapis.com/css?family=Raleway:400,700,700i&display=swap" rel="stylesheet">
     <link href="~/Content/font-awesome.min.css" rel="stylesheet"/>
     <link href="~/Content/Custom.css" rel="stylesheet"/>
@@ -21,7 +21,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("School Management MVC", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("School Management", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
@@ -72,7 +72,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - IF Software Development</p>
+            <p>&copy; @DateTime.Now.Year - Applica</p>
         </footer>
     </div>
 
